--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "react": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.5",
     "socket.io": "^2.3.0",
     "web-push": "^3.4.3"
