--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "home-site",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "build": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.config.js"
+    "build-dev": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.dev.js",
+    "build-prod": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.prod.js"
   },
   "author": "Apostolis Gerodimos",
   "license": "MIT",
@@ -15,11 +16,13 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "morgan": "^1.9.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
