--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
     "bcrypt": "^3.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
