--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "format": "prettier --write \"**/*.js|jsx\"",
     "build": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.config.js"
   },
   "author": "Apostolis Gerodimos",
@@ -17,6 +18,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "morgan": "^1.9.1",
+    "prettier": "^1.7.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
