--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"**/*.js|jsx\"",
+    "format": "prettier --write \"**/*.js\"",
     "build": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.config.js"
   },
   "author": "Apostolis Gerodimos",
