--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.config.js"
+    "build": "nodejs node_modules/webpack/bin/webpack.js --mode none --config webpack.config.js",
+    "watch": "node-sass sass/main.scss public/css/style.css -w"
   },
   "author": "Apostolis Gerodimos",
   "license": "MIT",
@@ -17,6 +18,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "morgan": "^1.9.1",
+    "node-sass": "^4.13.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
