--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
