--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build-dev": "webpack --config webpack.dev.js",
-    "build-prod": "webpack --config webpack.prod.js"
+    "build-prod": "webpack --config webpack.prod.js",
+    "doc": "jsdoc -c jsdoc-config.json"
   },
   "author": "Apostolis Gerodimos",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "jsdoc": "^3.6.4",
     "morgan": "^1.9.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
