--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode none --config webpack.config.js",
-    "watch": "node-sass sass/main.scss public/css/style.css -w"
+    "watch": "node-sass sass/main.scss public/css/style.css -w",
+    "format": "prettier --write  '**/*.{js,jsx,scss}' "
   },
   "author": "Apostolis Gerodimos",
   "license": "MIT",
@@ -19,6 +20,7 @@
     "css-loader": "^3.4.2",
     "morgan": "^1.9.1",
     "node-sass": "^4.13.1",
+    "prettier": "^1.7.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
